force-app/main/default/objects/Subscription__c/fields/Bookstore__c.field-meta.xml
<CustomField>
    <fullName>Bookstore__c</fullName>
    <description>Master-detail relationship between subscriptions and bookstore</description>
    <label>Bookstore</label>
    <referenceTo>Bookstore__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>