force-app/main/default/objects/Subscription__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of users subscription to bookstore announcements.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>