force-app/main/default/objects/Subscription__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each Notification</fullName>
                <default>true</default>
                <label>Each Notification</label>
            </value>
            <value>
                <fullName>Once a Day</fullName>
            </value>
            <value>
                <fullName>Once a Week</fullName>
            </value>
            <value>
                <fullName>Once a Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>